syntax = "proto3";

option java_multiple_files = true;
package proto;
import "connections.proto";

service ConnectionsGrpcService{
  rpc getConnections (ConnectionsProto) returns (ConnectionsResponseProto);
  rpc createConnection (CreateConnectionRequestProto) returns (ConnectionResponseProto);
  rpc respondConnection (RespondConnectionRequestProto) returns (ConnectionResponseProto);
  rpc getConnectionStatus(ConnectionStatusProto) returns (ConnectionStatusResponseProto);
  rpc createBlock (CreateBlockRequestProto) returns (BlockResponseProto);
}
